--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,5 @@
+$header-bar-height: 60px;
+
 // Margin / Padding
 $margin: $gutter;
 $padding: $gutter;
